--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-== Welcome to collab_a_tron
+== Welcome to collab_a_tron [![Build Status](https://secure.travis-ci.org/developerdave/collab_a_tron.png)](http://travis-ci.org/developerdave/collab_a_tron)
 
 Social made easy.
